--- a/account-service/src/main/resources/bootstrap.yml
+++ b/account-service/src/main/resources/bootstrap.yml
@@ -5,5 +5,7 @@ spring:
     name: account-service
   cloud:
     config:
-      label: dev
+      label: kosimo
       uri: http://localhost:8888
+features:
+  action1: true
