add local profile (for demos)

--- a/account-service/src/main/resources/bootstrap.yml
+++ b/account-service/src/main/resources/bootstrap.yml
@@ -5,7 +5,5 @@ spring:
     name: account-service
   cloud:
     config:
-      label: kosimo
+      label: local
       uri: http://localhost:8888
-features:
-  action1: true
