--- a/account-service/src/main/resources/bootstrap-local.yml
+++ b/account-service/src/main/resources/bootstrap-local.yml
@@ -5,5 +5,5 @@ spring:
     name: account-service
   cloud:
     config:
-      label: kosimog
+      label: kosimo
       uri: http://localhost:8888
