--- a/account-service/src/main/resources/bootstrap-prod.yml
+++ b/account-service/src/main/resources/bootstrap-prod.yml
@@ -5,7 +5,6 @@ spring:
     name: account-service
   cloud:
     config:
-      label: kosimo
+      label: kosimo-prod
       uri: http://localhost:8888
-features:
-  action1: true
+
