organise remote config under two branches only

--- a/account-service/src/main/resources/bootstrap-prod.yml
+++ b/account-service/src/main/resources/bootstrap-prod.yml
@@ -5,6 +5,6 @@ spring:
     name: account-service
   cloud:
     config:
-      label: kosimo-prod
+      label: master
       uri: http://localhost:8888
 
